Fix a11y issues. Fix background white on scoll. Fix table overflow.

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,5 +1,6 @@
 // Colors
-$bg-color: #22222c;
+$bg-color: #171721;
+$nav-bg-color: #22222c;
 $outline-color: #505066;
 $text-secondary-color: #8b8b8b;
 $white: #fff;
